# lush-moments-backend

./: .dockerignore  .env.example  .gitignore  API_ENDPOINTS.md  AUTHENTICATION_GUIDE.md  CLI.md  Dockerfile  FRONTEND_API_INTEGRATION.md  GETTING_STARTED.md  INTEGRATION_CHECKLIST.md  PROFESSIONAL_ENHANCEMENT.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SECURITY_UPDATE.md  SEEDER_GUIDE.md  check_ai_setup.py  check_prices.py  cli.py  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  seed.py  setup_ai_agent.py  test_agent.py  test_agent_tools.py
app/: config.py  database.py  main.py
app/agents/: __init__.py  lush_agent.py  prompts.py  tools.py
app/models/: __init__.py  booking_enhancement.py  chat_message.py  contact_info.py  contact_message.py  event_booking.py  faq.py  gallery_category.py  gallery_item.py  package.py  package_enhancement.py  package_item.py  session.py  testimonial.py  theme.py  translation.py  user.py
app/routes/: auth.py  bookings.py  chat.py  contact.py  contact_info.py  enhancements.py  faqs.py  (+6 more)
docs/: AI_AGENT_DOCUMENTATION.md  AUTH_UPDATE_SUMMARY.md  CHAT_SESSION_MERGING.md  CLI_GUIDE.md  FRONTEND_INTEGRATION.md  FRONTEND_INTEGRATION_SUMMARY.md  FUTURE_PALNS.md  GALLERY_UPLOAD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  MIGRATION_GUIDE.md  QUICKSTART.md  QUICKSTART_AI_CHAT.md  ROUTES_STRUCTURE.md  TAGS_MIGRATION_SUMMARY.md  instruction.md  plan.md
lush-moments-frontend/: INSTALL_TANSTACK_QUERY.md  package.json  pnpm-lock.yaml
migration/: env.py
uploads/: .gitkeep
(+80 files in other folders)
